--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,255 +1,206 @@
-*{
-	padding:0;
-	margin:0;
+* {
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    font-family: Helvetica;
-    background-color: whitesmoke;
-    font-size: 16px;
+  font-family: Helvetica;
+  background-color: whitesmoke;
+  font-size: 16px;
 }
 
+/*Menu*/
 
 .nav {
-font-size: 1rem;
+  font-size: 1rem;
 }
 
-h1 {
-font-size: 7rem;
-font-weight: bold;
-color: whitesmoke;
-text-align: center;
-background-image: url("images/corn.jpg");
-background-size: auto;
-background-repeat: repeat;
-height: 426px;
+/*Header*/
+
+.header h1 {
+  font-size: 7rem;
+  font-weight: bold;
+  color: whitesmoke;
+  text-align: center;
+  background-image: url("images/corn.jpg");
+  background-size: auto;
+  background-repeat: repeat;
+  height: 426px;
 }
 
-h1 span {
-    color:  #e0ac1c;
+.header h1 span {
+  color: #e0ac1c;
 }
+
+/*General*/
 
 h2 {
-font-size: 3rem;
-font-weight: bold;
-color:whitesmoke;
-background-color: gray;
+  font-size: 3rem;
+  font-weight: bold;
+  color: whitesmoke;
+  background-color: gray;
 }
 
 .img {
-    width: auto;
-    background-position-x: center;
-}
-
-.footer { 
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 150px;
-    background-color: lightseagreen;
-    color: white;
-    text-align-last: center;
-}
-
-
-body{
-	font:16px/1.6 Arial,  sans-serif;
-}
-
-header{
-	text-align: center;
-	padding-top: 100px;
-	margin-bottom:190px;
-}
-
-header h1{
-	font: normal 32px/1.5 'Open Sans', sans-serif;
-	color: #3F71AE;
-	padding-bottom: 16px;
-}
-
-header h2{
-	color: #F05283;
-}
-
-header span{
-	color: #3F71EA;
+  width: auto;
+  background-position-x: center;
 }
 
 
 /* The footer is fixed to the bottom of the page */
 
-footer{
-	position: fixed;
-	bottom: 0;
+footer {
+  position: fixed;
+  bottom: 0;
 }
 
-@media (max-height:800px){
-	footer { position: static; }
-	header { padding-top:40px; }
+@media (max-height: 800px) {
+  footer {
+    position: static;
+  }
+  header {
+    padding-top: 40px;
+  }
 }
 
-
-.footer-distributed{
-	background-color: #2c292f;
-	box-sizing: border-box;
-	width: 100%;
-	text-align: left;
-	font: bold 16px Helvetica;
-	padding: 50px 50px 60px 50px;
-	margin-top: 80px;
+.footer-distributed {
+  background-color: #2c292f;
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px Helvetica;
+  padding: 50px 50px 60px 50px;
+  margin-top: 80px;
 }
 
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
-.footer-distributed .footer-right{
-	display: inline-block;
-	vertical-align: top;
+.footer-distributed .footer-right {
+  display: inline-block;
+  vertical-align: top;
 }
 
 /* Footer left */
 
-.footer-distributed .footer-left{
-	width: 30%;
+.footer-distributed .footer-left {
+  width: 30%;
 }
 
-.footer-distributed h3{
-	color:  #ffffff;
-	font: normal 36px Helvetica, cursive;
-	margin: 0;
+.footer-distributed h3 {
+  color: #ffffff;
+  font: normal 36px Helvetica, cursive;
+  margin: 0;
 }
 
-
-.footer-distributed h3 span{
-	color:  #e0ac1c;
+.footer-distributed h3 span {
+  color: #e0ac1c;
 }
 
 /* Footer links */
 
-.footer-distributed .footer-links{
-	color:  #ffffff;
-	margin: 20px 0 12px;
+.footer-distributed .footer-links {
+  color: #ffffff;
+  margin: 20px 0 12px;
 }
 
-.footer-distributed .footer-links a{
-	display:inline-block;
-	line-height: 1.8;
-	text-decoration: none;
-	color:  inherit;
+.footer-distributed .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
 }
 
-.footer-distributed .footer-company-name{
-	color:  #8f9296;
-	font-size: 14px;
-	font-weight: normal;
-	margin: 0;
+.footer-distributed .footer-company-name {
+  color: #8f9296;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
 }
 
 /* Footer Center */
 
-.footer-distributed .footer-center{
-	width: 35%;
+.footer-distributed .footer-center {
+  width: 35%;
 }
 
 
-.footer-distributed .footer-center i{
-	background-color:  #33383b;
-	color: #ffffff;
-	font-size: 25px;
-	width: 38px;
-	height: 38px;
-	border-radius: 50%;
-	text-align: center;
-	line-height: 42px;
-	margin: 10px 15px;
-	vertical-align: middle;
+.footer-distributed .footer-center p {
+  display: inline-block;
+  color: #ffffff;
+  vertical-align: middle;
+  margin: 0;
+  line-height: 38px;
 }
 
-.footer-distributed .footer-center i.fa-envelope{
-	font-size: 17px;
-	line-height: 38px;
+.footer-distributed .footer-center p span {
+  display: inline-block;
+  font-weight: normal;
+  font-size: 14px;
 }
 
-.footer-distributed .footer-center p{
-	display: inline-block;
-	color: #ffffff;
-	vertical-align: middle;
-	margin:0;
+.footer-distributed .footer-center .phone {
+  color: #e0ac1c;
+  text-decoration: none;
 }
-
-.footer-distributed .footer-center p span{
-	display:block;
-	font-weight: normal;
-	font-size:14px;
-	line-height:2;
-}
-
-.footer-distributed .footer-center p a{
-	color:  #e0ac1c;
-	text-decoration: none;;
-}
-
 
 /* Footer Right */
 
-.footer-distributed .footer-right{
-	width: 30%;
+.footer-distributed .footer-right {
+  width: 30%;
 }
 
-.footer-distributed .footer-company-about{
-	line-height: 20px;
-	color:  #92999f;
-	font-size: 13px;
-	font-weight: normal;
-	margin: 0;
+
+.footer-distributed .footer-find-us p{
+  display: block;
+  color: #ffffff;
+  margin: 0;
+  line-height: 38px;
 }
 
-.footer-distributed .footer-company-about span{
-	display: block;
-	color:  #ffffff;
-	font-size: 18px;
-	font-weight: bold;
-	margin-bottom: 20px;
+
+.footer-distributed .footer-find-us {
+  display: block;
+  color: #0a0a0a;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
-.footer-distributed .footer-icons{
-	margin-top: 25px;
+.footer-distributed .footer-icons {
+  margin-top: 25px;
 }
 
-.footer-distributed .footer-icons a{
-	display: inline-block;
-	width: 35px;
-	height: 35px;
-	cursor: pointer;
-	background-color:  #33383b;
-	border-radius: 2px;
+.footer-distributed .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #33383b;
+  border-radius: 2px;
 
-	font-size: 20px;
-	color: #ffffff;
-	text-align: center;
-	line-height: 35px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
 
-	margin-right: 3px;
-	margin-bottom: 5px;
+  margin-right: 3px;
+  margin-bottom: 5px;
 }
 
 /* Here is the code for Responsive Footer */
 /* You can remove below code if you don't want Footer to be responsive */
 
-
 @media (max-width: 880px) {
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-center,
+  .footer-distributed .footer-right {
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
+  }
 
-	.footer-distributed .footer-left,
-	.footer-distributed .footer-center,
-	.footer-distributed .footer-right{
-		display: block;
-		width: 100%;
-		margin-bottom: 40px;
-		text-align: center;
-	}
-
-	.footer-distributed .footer-center i{
-		margin-left: 0;
-	}
-
+  .footer-distributed .footer-center i {
+    margin-left: 0;
+  }
 }
