--- a/resources/styles.css
+++ b/resources/styles.css
@@ -12,11 +12,28 @@ body {
 /*Menu*/
 
 .nav {
-  font-size: 1rem;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #33383b;
+}
+
+.nav .li {
+  display: block;
+  color: whitesmoke;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  float: left;
+  border-right: 1px solid #bbb;
 }
 
 /*Header*/
 
+.header {
+  padding: 0;
+}
 .header h1 {
   font-size: 7rem;
   font-weight: bold;
@@ -32,7 +49,7 @@ body {
   color: #e0ac1c;
 }
 
-/*General*/
+/*Content*/
 
 h2 {
   font-size: 3rem;
@@ -45,7 +62,6 @@ h2 {
   width: auto;
   background-position-x: center;
 }
-
 
 /* The footer is fixed to the bottom of the page */
 
@@ -123,7 +139,6 @@ footer {
   width: 35%;
 }
 
-
 .footer-distributed .footer-center p {
   display: inline-block;
   color: #ffffff;
@@ -149,14 +164,12 @@ footer {
   width: 30%;
 }
 
-
-.footer-distributed .footer-find-us p{
+.footer-distributed .footer-find-us p {
   display: block;
   color: #ffffff;
   margin: 0;
   line-height: 38px;
 }
-
 
 .footer-distributed .footer-find-us {
   display: block;
